<resources>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="input_method_selector_show_automatically_value">0</string>
    <string name="input_method_selector_always_show_value">1</string>
    <string name="input_method_selector_always_hide_value">2</string>
    <string name="input_method_selector_visibility_default_value">0</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create">Create</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="device_info_default">Unknown</string>
    <string name="show_dev_on">You are now a developer!</string>
    <string name="show_dev_already">No need, you are already a developer.</string>
    <string name="header_category_wireless_networks">WIRELESS &amp; NETWORKS</string>
    <string name="header_category_device">DEVICE</string>
    <string name="header_category_personal">PERSONAL</string>
    <string name="header_category_system">SYSTEM</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="sms_over_ims_on">Turn on SMS over IMS</string>
    <string name="sms_over_ims_off">Turn off SMS over IMS</string>
    <string name="ims_reg_required_on">Turn on IMS registration required</string>
    <string name="ims_reg_required_off">Turn off IMS registration required</string>
    <string name="lte_ram_dump_on">Turn on lte ram dump</string>
    <string name="lte_ram_dump_off">Turn off lte ram dump</string>
    <string name="radioInfo_menu_viewADN">View SIM address book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="radioInfo_menu_getPDP">Get PDP list</string>
    <string name="radioInfo_service_in">In service</string>
    <string name="radio_controls_title">More…</string>
    <string name="wireless_networks_settings_title">Wireless &amp; networks</string>
    <string name="date_and_time_settings_title">Date &amp; time</string>
    <string name="location_settings_title">Location access</string>
    <string name="security_settings_title">Security</string>
    <string name="security_passwords_title">Passwords</string>
    <string name="device_admin_title">Device administration</string>
    <string name="manage_device_admin">Device administrators</string>
    <string name="manage_device_admin_summary">View or deactivate device administrators</string>
    <string name="manage_notification_access">Notification access</string>
    <string name="bluetooth_settings_title">Bluetooth</string>
    <string name="wifi_display_settings_title">Wireless display</string>
    <string name="wifi_settings_title">Wi‑Fi</string>
    <string name="wifi_notify_open_networks">Network notification</string>
    <string name="wifi_notify_open_networks_summary">Notify me when an open network is available</string>
    <string name="wifi_poor_network_detection">Avoid poor connections</string>
    <string name="wifi_poor_network_detection_summary">"Don't use a Wi‑Fi network unless it has a good Internet connection"</string>
    <string name="wifi_scan_always_available">Scanning always available</string>
    <string name="wifi_scan_always_available_summary">"Let Google's location service and other apps scan for networks, even when Wi-Fi is off"</string>
    <string name="wifi_setting_sleep_policy_title">Keep Wi‑Fi on during sleep</string>
    <string name="wifi_suspend_optimizations">Wi‑Fi optimization</string>
    <string name="wifi_suspend_optimizations_summary">Minimize battery usage when Wi‑Fi is on</string>
    <string name="wifi_wapi_cert_mgmt_titlebar">WAPI Certificate Management</string>
    <string name="wifi_wapi_cert_install">Install WAPI Certificate</string>
    <string name="wifi_wapi_cert_uninstall">Uninstall WAPI Certificate</string>
    <string name="wifi_advanced_titlebar">Advanced Wi‑Fi</string>
    <string name="wifi_setting_frequency_band_title">Wi‑Fi frequency band</string>
    <string name="wifi_setting_frequency_band_summary">Specify the frequency range of operation</string>
    <string name="wifi_advanced_mac_address_title">MAC address</string>
    <string name="wifi_advanced_ip_address_title">IP address</string>
    <string name="testing_wifi_info">Wi-Fi information</string>
    <string name="wifi_api_test">Wi-Fi API</string>
    <string name="wifi_status_test">Wi-Fi status</string>
    <string name="wifi_config_info">Wi-Fi config</string>
    <string name="sound_settings">Sound</string>
    <string name="ringtone_title">Phone ringtone</string>
    <string name="all_volume_title">Volumes</string>
    <string name="notification_sound_title">Default notification sound</string>
    <string name="notification_pulse_title">Pulse notification light</string>
    <string name="notification_sound_dialog_title">Default notification sound</string>
    <string name="dtmf_tone_enable_title">Dial pad touch tones</string>
    <string name="sound_effects_enable_title">Touch sounds</string>
    <string name="lock_sounds_enable_title">Screen lock sound</string>
    <string name="haptic_feedback_enable_title">Vibrate on touch</string>
    <string name="account_settings">Accounts</string>
    <string name="display_settings">Display</string>
    <string name="accelerometer_title">Auto-rotate screen</string>
    <string name="brightness">Brightness</string>
    <string name="screencolor">Screen Color</string>
    <string name="screen_timeout">Sleep</string>
    <string name="screen_timeout_summary">After %1$s of inactivity</string>
    <string name="wallpaper_settings_title">Wallpaper</string>
    <string name="screensaver_settings_title">Daydream</string>
    <string name="title_font_size">Font size</string>
    <string name="summary_font_size">%1$s</string>
    <string name="dialog_title_font_size">Font size</string>
    <string name="sim_lock_settings_category">Set up SIM/RUIM card lock</string>
    <string name="sim_lock_settings_title">SIM/RUIM card lock</string>
    <string name="storage_settings">Storage</string>
    <string name="location_network_based">Wi‑Fi &amp; mobile network location</string>
    <string name="location_neighborhood_level">"Let apps use Google's location service to estimate your location faster. Anonymous location data will be collected and sent to Google."</string>
    <string name="location_gps">GPS satellites</string>
    <string name="location_street_level">Let apps use GPS on your phone to pinpoint your location</string>
    <string name="assisted_gps">Use assisted GPS</string>
    <string name="assisted_gps_enabled">Use server to assist GPS (uncheck to reduce network usage)</string>
    <string name="assisted_gps_disabled">Use server to assist GPS (check to improve GPS performance)</string>
    <string name="location_agps_params_settings_title">AGPS settings</string>
    <string name="location_access_title">Access to my location</string>
    <string name="location_access_summary">Let apps that have asked your permission use your location information</string>
    <string name="location_sources_heading">Location sources</string>
    <string name="about_settings">About phone</string>
    <string name="applications_settings">Apps</string>
    <string name="install_applications">Unknown sources</string>
    <string name="install_unknown_applications">Allow installation of apps from unknown sources</string>
    <string name="verify_applications">Verify apps</string>
    <string name="verify_applications_summary">Disallow or warn before installation of apps that may cause harm</string>
    <string name="language_settings">Language &amp; input</string>
    <string name="show_password">Make passwords visible</string>
    <string name="development_settings_title">Developer options</string>
    <string name="accessibility_settings">Accessibility</string>
    <string name="power_usage_summary_title">Battery</string>
    <string name="credentials_title">Credential storage</string>
    <string name="credentials_install">Install from SD card</string>
    <string name="credentials_install_summary">Install NOT WAPI certificates from SD card</string>
    <string name="credentials_reset">Clear credentials</string>
    <string name="credentials_reset_summary">Remove all certificates</string>
    <string name="trusted_credentials">Trusted credentials</string>
    <string name="trusted_credentials_summary">Display trusted CA certificates</string>
    <string name="credential_storage_type">Storage type</string>
    <string name="privacy_settings">Reset</string>
    <string name="add_account_label">Add account</string>
    <string name="data_usage_summary_title">Data usage</string>
    <string name="data_usage_enable_mobile">Mobile data</string>
    <string name="multi_sim_settings_title">Dual SIM settings</string>
    <string name="user_settings_title">Users</string>
    <string name="sim_icon_title">Icons</string>
    <string name="mobile_network_setting">Mobile network settings</string>
    <string name="call_settings">Call settings</string>
    <string name="sim_naming_title">SIM Card Naming</string>
    <string name="summary_network_settings">Set options for mobile networks, APNs</string>
    <string name="summary_call_settings">Set voice mail, call options for dual SIMs</string>
    <string name="enhanced_brightness_summary">It is usually used to improve video quality and save more power when playing video clips.</string>
    <string name="enhanced_brightness">Dynamic Brightness</string>
    <string name="wifi_advanced_gateway">Gateway</string>
    <string name="wifi_advanced_network_netmask">Netmask</string>
    <string name="label_global_roaming_settings">Roaming Settings</string>
    <string name="select_in_ssids_type_title">Reselection among SSID</string>
    <string name="wifi_auto_connect_type_title">Auto connect type</string>
    <string name="wifi_auto_connect_type_summary">Specify network connection type</string>
    <string name="wifi_to_gsm_connect_type_title">WLAN->Cellular hint</string>
    <string name="wifi_set_priority_type_title">Set AP priority manually</string>
    <string name="wifi_set_priority_type_summary">Allow to set priority for each access point manually</string>
    <string name="wifi_set_priority_settings_title">AP priority settings</string>
    <string name="wifi_set_priority_settings_summary">Click to set priority of each access point</string>
    <string name="gsm_to_wifi_connect_type_title">Cellular->WLAN</string>
    <string name="DM_poweron">Enhanced Post-sale Service</string>
    <string name="edit_profile">Edit profile</string>
    <string name="profile_name">Name</string>
    <string name="alert_style">Alert style</string>
    <string name="sound_category_calls_and_notification_title">Ringtone &amp; notifications</string>
    <string name="sound_category_feedback_title">System</string>
    <string name="profile_title">Profiles</string>
    <string name="dm_autoboot">DM Autoboot</string>
    <string name="dm_autoboot_summary">Allow DM to boot up automatically</string>
    <string name="save_power_management">Save power management</string>
    <string name="led_mangement">LED blink management</string>
    <string name="led_missing_call">missing call</string>
    <string name="led_missing_call_summary">"\u0009led don't blink for it after selected"</string>
    <string name="led_missing_message">not-read message</string>
    <string name="led_missing_message_summary">"\u0009led don't blink for it after selected"</string>
    <string name="led_lowerpower">lower power</string>
    <string name="led_lowerpower_summary">"\u0009led don't blink for it after selected"</string>
    <string name="led_other">other notification</string>
    <string name="led_other_summary">"\u0009led don't blink for it after selected"</string>
</resources>