<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/wifi_advanced_titlebar"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:persistent="false" android:title="@string/wifi_notify_open_networks" android:key="notify_open_networks" android:summary="@string/wifi_notify_open_networks_summary" />
    <ListPreference android:persistent="false" android:entries="@array/wifi_sleep_policy_entries" android:title="@string/wifi_setting_sleep_policy_title" android:key="sleep_policy" android:entryValues="@array/wifi_sleep_policy_values" />
    <CheckBoxPreference android:persistent="false" android:title="@string/wifi_set_priority_type_title" android:key="wifi_priority_type" android:summary="@string/wifi_set_priority_type_summary" />
    <PreferenceScreen android:persistent="false" android:title="@string/wifi_set_priority_settings_title" android:key="wifi_priority_settings" android:summary="@string/wifi_set_priority_settings_summary" android:dependency="wifi_priority_type" android:fragment="com.android.stocksettings.wifi.WifiPrioritySettings" />
    <CheckBoxPreference android:persistent="false" android:title="@string/wifi_scan_always_available" android:key="wifi_scan_always_available" android:summary="@string/wifi_scan_always_available_summary" />
    <ListPreference android:persistent="false" android:entries="@array/wifi_connect_type_entries" android:title="@string/select_in_ssids_type_title" android:key="select_in_ssids_type" android:entryValues="@array/wifi_connect_type_values" />
    <CheckBoxPreference android:persistent="false" android:title="@string/wifi_auto_connect_type_title" android:key="auto_connect_type" android:summary="@string/wifi_auto_connect_type_summary" />
    <CheckBoxPreference android:persistent="false" android:title="@string/wifi_to_gsm_connect_type_title" android:key="wifi_gsm_connect_type" />
    <ListPreference android:persistent="false" android:entries="@array/cellcular2wifi_entries" android:title="@string/gsm_to_wifi_connect_type_title" android:key="gsm_wifi_connect_type" android:entryValues="@array/cellcular2wifi_values" />
    <CheckBoxPreference android:persistent="false" android:title="@string/wifi_poor_network_detection" android:key="wifi_poor_network_detection" android:summary="@string/wifi_poor_network_detection_summary" />
    <ListPreference android:persistent="false" android:entries="@array/wifi_frequency_band_entries" android:title="@string/wifi_setting_frequency_band_title" android:key="frequency_band" android:summary="@string/wifi_setting_frequency_band_summary" android:entryValues="@array/wifi_frequency_band_values" />
    <CheckBoxPreference android:persistent="false" android:title="@string/wifi_suspend_optimizations" android:key="suspend_optimizations" android:summary="@string/wifi_suspend_optimizations_summary" />
    <Preference android:title="@string/wifi_advanced_mac_address_title" android:key="mac_address" style="?android:attr/preferenceInformationStyle" />
    <Preference android:title="@string/wifi_advanced_ip_address_title" android:key="current_ip_address" style="?android:attr/preferenceInformationStyle" />
    <PreferenceCategory android:title="@string/wifi_wapi_cert_mgmt_titlebar" />
    <Preference android:persistent="false" android:title="@string/wifi_wapi_cert_install" android:key="wapi_cert_install" />
    <Preference android:persistent="false" android:title="@string/wifi_wapi_cert_uninstall" android:key="wapi_cert_uninstall" />
    <Preference android:title="@string/wifi_advanced_gateway" android:key="current_gateway" style="?android:attr/preferenceInformationStyle" />
    <Preference android:title="@string/wifi_advanced_network_netmask" android:key="current_netmask" style="?android:attr/preferenceInformationStyle" />
</PreferenceScreen>