<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:persistent="false" android:title="@string/sim_lock_settings_title" android:key="sim_lock">
        <Preference android:persistent="false" android:title="@string/sim_lock_settings_category" android:key="sim_lock_settings">
            <intent android:targetPackage="com.android.stocksettings" android:action="android.intent.action.MAIN" android:targetClass="com.android.stocksettings.IccLockSettings" />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:persistent="false" android:title="@string/security_passwords_title">
        <CheckBoxPreference android:persistent="false" android:title="@string/show_password" android:key="show_password" />
    </PreferenceCategory>
    <PreferenceCategory android:persistent="false" android:title="@string/device_admin_title" android:key="device_admin_category">
        <Preference android:persistent="false" android:title="@string/manage_device_admin" android:summary="@string/manage_device_admin_summary" android:fragment="com.android.stocksettings.DeviceAdminSettings" />
        <CheckBoxPreference android:persistent="false" android:title="@string/install_applications" android:key="toggle_install_applications" android:summaryOn="@string/install_unknown_applications" android:summaryOff="@string/install_unknown_applications" />
        <CheckBoxPreference android:persistent="false" android:title="@string/verify_applications" android:key="toggle_verify_applications" android:summaryOn="@string/verify_applications_summary" android:summaryOff="@string/verify_applications_summary" />
        <CheckBoxPreference android:persistent="false" android:title="@string/DM_poweron" android:key="DM_poweron" />
        <CheckBoxPreference android:persistent="false" android:title="@string/dm_autoboot" android:key="toggle_dm_autoboot" android:summaryOn="@string/dm_autoboot_summary" android:summaryOff="@string/dm_autoboot_summary" />
        <Preference android:persistent="false" android:title="@string/manage_notification_access" android:key="manage_notification_access" android:fragment="com.android.stocksettings.NotificationAccessSettings" />
    </PreferenceCategory>
    <PreferenceCategory android:persistent="false" android:title="@string/credentials_title" android:key="credentials_management">
        <Preference android:persistent="false" android:title="@string/credential_storage_type" android:key="credential_storage_type" style="?android:attr/preferenceInformationStyle" />
        <Preference android:persistent="false" android:title="@string/trusted_credentials" android:summary="@string/trusted_credentials_summary" android:fragment="com.android.stocksettings.TrustedCredentialsSettings" />
        <Preference android:persistent="false" android:title="@string/credentials_install" android:summary="@string/credentials_install_summary">
            <intent android:targetPackage="com.android.certinstaller" android:action="android.credentials.INSTALL" android:targetClass="com.android.certinstaller.CertInstallerMain" />
        </Preference>
        <Preference android:persistent="false" android:title="@string/credentials_reset" android:key="reset_credentials" android:summary="@string/credentials_reset_summary">
            <intent android:targetPackage="com.android.stocksettings" android:action="com.android.credentials.RESET" android:targetClass="com.android.stocksettings.CredentialStorage" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>