<?xml version="1.0" encoding="utf-8"?>
<preference-headers
  xmlns:android="http://schemas.android.com/apk/res/android">
    <header android:id="@id/wireless_section" android:title="@string/header_category_wireless_networks" />
    <header android:icon="@drawable/ic_settings_wireless" android:id="@id/wifi_settings" android:title="@string/wifi_settings_title" android:fragment="com.android.stocksettings.wifi.WifiSettings" />
    <header android:icon="@drawable/stat_notify_mobile_data" android:id="@id/mobiledata_settings" android:title="@string/data_usage_enable_mobile">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.MobileNetworkSettings" />
    </header>
    <header android:icon="@drawable/ic_settings_bluetooth2" android:id="@id/bluetooth_settings" android:title="@string/bluetooth_settings_title" android:fragment="com.android.stocksettings.bluetooth.BluetoothSettings" />
    <header android:icon="@drawable/ic_settings_data_usage" android:id="@id/data_usage_settings" android:title="@string/data_usage_summary_title" android:fragment="com.android.stocksettings.DataUsageSummary" />
    <header android:id="@id/operator_settings" android:fragment="com.android.stocksettings.WirelessSettings">
        <intent android:action="com.android.stocksettings.OPERATOR_APPLICATION_SETTING" />
    </header>
    <header android:icon="@drawable/empty_icon" android:id="@id/wireless_settings" android:title="@string/radio_controls_title" android:fragment="com.android.stocksettings.WirelessSettings" android:breadCrumbTitle="@string/wireless_networks_settings_title" />
    <header android:id="@id/device_section" android:title="@string/header_category_device" />
    <header android:icon="@drawable/ic_settings_sim_display" android:id="@id/multi_sim_settings" android:title="@string/multi_sim_settings_title">
        <intent android:targetPackage="com.android.stocksettings" android:action="android.intent.action.MAIN" android:targetClass="com.android.stocksettings.multisimsettings.MultiSimSettings" />
    </header>
    <header android:icon="@drawable/ic_roaming_settings" android:id="@id/global_roaming_settings" android:title="@string/label_global_roaming_settings">
        <intent android:action="com.android.action.roamingsettings" />
    </header>
    <header android:icon="@drawable/ic_settings_profiles" android:title="@string/profile_title">
        <intent android:action="com.android.stocksettings.profile.ProfileSettings.ACTION" />
    </header>
    <header android:icon="@drawable/ic_settings_sound" android:id="@id/sound_settings" android:title="@string/sound_settings" android:fragment="com.android.stocksettings.SoundSettings" />
    <header android:icon="@drawable/ic_settings_display" android:id="@id/display_settings" android:title="@string/display_settings" android:fragment="com.android.stocksettings.DisplaySettings" />
    <header android:icon="@drawable/ic_settings_storage" android:id="@id/storage_settings" android:title="@string/storage_settings" android:fragment="com.android.stocksettings.deviceinfo.Memory" />
    <header android:icon="@drawable/ic_settings_battery" android:id="@id/battery_settings" android:title="@string/power_usage_summary_title" android:fragment="com.android.stocksettings.fuelgauge.PowerUsageSummary" />
    <header android:icon="@drawable/ic_settings_applications" android:id="@id/application_settings" android:title="@string/applications_settings" android:fragment="com.android.stocksettings.applications.ManageApplications" />
    <header android:icon="@drawable/ic_settings_multiuser" android:id="@id/user_settings" android:title="@string/user_settings_title" android:fragment="com.android.stocksettings.users.UserSettings" />
    <header android:id="@id/manufacturer_settings" android:fragment="com.android.stocksettings.WirelessSettings">
        <intent android:action="com.android.stocksettings.MANUFACTURER_APPLICATION_SETTING" />
    </header>
    <header android:id="@id/personal_section" android:title="@string/header_category_personal" />
    <header android:icon="@drawable/ic_settings_location" android:id="@id/location_settings" android:title="@string/location_settings_title" android:fragment="com.android.stocksettings.LocationSettings" />
    <header android:icon="@drawable/ic_settings_security" android:id="@id/security_settings" android:title="@string/security_settings_title" android:fragment="com.android.stocksettings.SecuritySettings" />
    <header android:icon="@drawable/ic_settings_language" android:id="@id/language_settings" android:title="@string/language_settings" android:fragment="com.android.stocksettings.inputmethod.InputMethodAndLanguageSettings" />
    <header android:icon="@drawable/ic_settings_backup" android:id="@id/privacy_settings" android:title="@string/privacy_settings" android:fragment="com.android.stocksettings.PrivacySettings" />
    <header android:id="@id/account_settings" android:title="@string/account_settings" />
    <header android:icon="@drawable/ic_menu_add" android:id="@id/account_add" android:title="@string/add_account_label">
        <intent android:action="android.settings.ADD_ACCOUNT_SETTINGS" />
    </header>
    <header android:id="@id/system_section" android:title="@string/header_category_system" />
    <header android:icon="@drawable/ic_settings_date_time" android:id="@id/date_time_settings" android:title="@string/date_and_time_settings_title" android:fragment="com.android.stocksettings.DateTimeSettings" />
    <header android:icon="@drawable/ic_settings_power_save_mode" android:id="@id/save_power_settings" android:title="@string/save_power_management" android:fragment="com.android.stocksettings.SavePowerSettings" />
    <header android:icon="@drawable/ic_settings_accessibility" android:id="@id/accessibility_settings" android:title="@string/accessibility_settings" android:fragment="com.android.stocksettings.AccessibilitySettings" />
    <header android:icon="@drawable/ic_settings_development" android:id="@id/development_settings" android:title="@string/development_settings_title" android:fragment="com.android.stocksettings.DevelopmentSettings" />
    <header android:icon="@drawable/ic_settings_about" android:id="@id/about_settings" android:title="@string/about_settings" android:fragment="com.android.stocksettings.DeviceInfoSettings" />
</preference-headers>