<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.stocksettings">
    <PreferenceScreen android:persistent="false" android:title="@string/device_info_default" android:key="net_service_provider_key" android:summary="@string/device_info_default" />
    <EditTextPreference android:persistent="false" android:singleLine="true" android:maxLength="6" android:key="sim_name_key" android:dialogTitle="@string/sim_naming_title" android:inputType="textNoSuggestions" />
    <com.android.stocksettings.multisimsettings.ImageListPreference android:persistent="false" android:title="@string/sim_icon_title" android:key="sim_icon_key" settings:entries="@array/select_sim_icon_entries" settings:entryValues="@array/select_sim_icon_values" />
    <PreferenceScreen android:persistent="false" android:title="@string/mobile_network_setting" android:key="mobile_network_key" android:summary="@string/summary_network_settings">
        <intent android:targetPackage="com.android.stocksettings" android:action="android.intent.action.MAIN" android:targetClass="com.android.stocksettings.SelectSubscription" />
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/call_settings" android:key="call_setting_key" android:summary="@string/summary_call_settings">
        <intent android:targetPackage="com.android.stocksettings" android:action="android.intent.action.MAIN" android:targetClass="com.android.stocksettings.SelectSubscription" />
    </PreferenceScreen>
</PreferenceScreen>